# ChangeLog for media-gfx/pngcrush
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/ChangeLog,v 1.47 2009/11/26 09:24:44 maekke Exp $

  26 Nov 2009; Markus Meier <maekke@gentoo.org> pngcrush-1.6.15.ebuild,
  pngcrush-1.6.19.ebuild:
  add trailing slash to HOMEPAGE by Mr. Anderson in bug #293819

*pngcrush-1.6.19 (28 Jun 2009)

  28 Jun 2009; Markus Meier <maekke@gentoo.org> +pngcrush-1.6.19.ebuild:
  version bump, reported by Michael Huber in bug #273168

  01 Jun 2009; Markus Meier <maekke@gentoo.org> -pngcrush-1.6.10.ebuild,
  -files/pngcrush-1.6.10-makefile_and_missing_definitions.patch,
  -pngcrush-1.6.14.ebuild:
  old

  30 May 2009; nixnut <nixnut@gentoo.org> pngcrush-1.6.15.ebuild:
  ppc stable #268865

  14 May 2009; Christian Faulhammer <fauli@gentoo.org>
  pngcrush-1.6.15.ebuild:
  stable x86, bug 268865

  12 May 2009; Kenneth Prugh <ken69267@gentoo.org> pngcrush-1.6.15.ebuild:
  amd64 stable, bug #268865

*pngcrush-1.6.15 (02 Apr 2009)

  02 Apr 2009; Mike Frysinger <vapier@gentoo.org> files/Makefile,
  +pngcrush-1.6.15.ebuild:
  Strip makefile down and version bump.

*pngcrush-1.6.14 (14 Mar 2009)

  14 Mar 2009; Markus Meier <maekke@gentoo.org> +files/Makefile,
  +pngcrush-1.6.14.ebuild:
  version bump to 1.6.14, add the Makefile to files/ instead of creating a
  patch for each version

  30 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  pngcrush-1.6.10.ebuild:
  ppc stable, bug #249026

  30 Nov 2008; Markus Meier <maekke@gentoo.org> pngcrush-1.6.10.ebuild:
  amd64/x86 stable, bug #249026

*pngcrush-1.6.10 (15 Oct 2008)

  15 Oct 2008; Markus Meier <maekke@gentoo.org>
  +files/pngcrush-1.6.10-makefile_and_missing_definitions.patch,
  +pngcrush-1.6.10.ebuild:
  bump to 1.6.10 by Sergey Dryabzhinsky in bug #242110

  24 Aug 2008; Markus Meier <maekke@gentoo.org>
  -files/pngcrush-1.6.2-ascall.patch,
  -files/pngcrush-1.6.4-modified-debian-patchset-5.patch,