@@ -1,7 +1,9 @@
 AUX Makefile 266 RMD160 e0de84c3254288cc52266e6f05656758f5102c62 SHA1 af142ea41bb37f5b4d82a9d38f9a613df57a6a2e SHA256 29a1424722da4229c2a224cf73504e6bb712ec74f092500bce78fd9e8513af45
 DIST pngcrush-1.6.15-nolib.tar.bz2 42608 RMD160 4f25e825ad1eda86ea0a8baf36b4783ae317a5fc SHA1 c3d20e1fdac37d3208ee5cf04173144f14377006 SHA256 3d27f7c3b7f37d29b2c449d0228154b1807a215a558fccec0c12ce7bbf9819e1
 DIST pngcrush-1.6.19-nolib.tar.bz2 53664 RMD160 f22573b33e525fabb971f0da2dc3412957e1d9f0 SHA1 f3077e706ead1231c67dd9c995d87b27bf04125d SHA256 ed53c8c1779bf2a20519272d21575b91c396ea885351e4c7384bb1f2d586fc6c
+DIST pngcrush-1.7.6-nolib.tar.bz2 48470 RMD160 26d250ea62a7a79c0b01adb5c25d467364606ba2 SHA1 a2684daad24d937a53fa3f01f9165feb7d0f02f2 SHA256 b112f0f67bf9fb6b80065621782af877e53201c8a3111cf1be458f2a6e1df04b
 EBUILD pngcrush-1.6.15.ebuild 801 RMD160 67a648ca410424b0a3fa1a39323343ca7c0e9ccb SHA1 f037f118a9a51ce5de5e2629e370f351518c4299 SHA256 efb7d7ce245822f881f9d0631507827fddcd60bc0f44f483a61ceaf3f99b651f
 EBUILD pngcrush-1.6.19.ebuild 811 RMD160 1b98bb20b4ac1616a36d842bf5a83f3126ea9697 SHA1 8356b004edf094286f31c43f62fda1d034c5d28d SHA256 f0fb7420713de5d001c639c1c16d1e68f9b5a577fb5b4f106dd416567bd350ab
-MISC ChangeLog 6004 RMD160 1c77474752a638c2276089cffeb2f530f26b37eb SHA1 0c967c5193aac454bbabf793c4f59a38a9f9253c SHA256 e3c8552a92e1c2f4b5952f93b75e42643654ff2e781d7d8d112131012bf64cc4
+EBUILD pngcrush-1.7.6.ebuild 777 RMD160 ec2605d50c7b72d838aa7b7db1016bbd6e2ac099 SHA1 ae3e14babb17f7312ca7b198243c0f4faf44347b SHA256 20cf34109d4f4896b6e070b45e55a8fe890438510132b3492e82a465bc837623
+MISC ChangeLog 6120 RMD160 1a7e903cfef114649ca61707bcec584e4682e65d SHA1 b59008d64d9d8ce5aa0237859ff8ecb004a625b9 SHA256 4bea50616dbc64c9cc94f91fb5ae1930ab7d9f8f4136705a09ee606916da4cb8
 MISC metadata.xml 161 RMD160 60f70b15d67f0e6aafc59833b2f0a30e30b51765 SHA1 1c35398222ef7ed670c31965e42cca77fe4b1da6 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1
